unnecessary code changes are removed from porter.yaml file and template.dockerfile

--- a/porter.yaml
+++ b/porter.yaml
@@ -17,8 +17,8 @@ version: 0.1.0
 # Description of the bundle and what it does.
 description: "An example Porter configuration"
 # Registry where the bundle is published to by default
-# registry: "localhost:5000"
-registry: testcompositerpbundles.azurecr.io
+registry: "localhost:5000"
+# registry: testcompositerpbundles.azurecr.io
 # If you want to customize the Dockerfile in use, uncomment the line below and update the referenced file. 
 # See https://getporter.org/bundle/custom-dockerfile/
 dockerfile: template.Dockerfile
